# Python-SDK-for-Offers-API

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml
examples/: plugin_usage_example.py
src/offers_sdk/: __init__.py  auth.py  cache.py  cache_clear_middleware.py  cli.py  client.py  client_sync.py  config.py  exceptions.py  logging_middleware.py  middleware.py  token_store.py
src/offers_sdk/plugins/: __init__.py  examples.py
src/offers_sdk/transport/: __init__.py  aiohttp.py  base.py  httpx.py  requests.py
tests/: fakes.py  test_auth.py  test_cache_clear_middleware.py  test_client.py  test_config.py  test_example_plugins.py  test_get_offers.py  test_middleware.py  test_plugin_integration.py  test_plugin_manager.py  test_sdk_components.py
