[project]
name = "offers-sdk"
version = "0.1.0"
description = "Async Offers API SDK"
authors = [
    {name = "bntmzu",email = "kuranova988@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "httpx (>=0.20.0,<0.28.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
]

[project.optional-dependencies]
cli = ["click >=8.0.0,<9.0.0"]
cache = [
    "aiocache (>=0.12.3,<0.13.0)"
]
aiohttp = [
    "aiohttp (>=3.12.15,<4.0.0)"
]
requests = [
    "requests (>=2.32.4,<3.0.0)"
]

[project.scripts]
offers-cli = "offers_sdk.cli:cli"

[tool.poetry]
packages = [{include = "offers_sdk", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-asyncio = "^1.1"
pytest-cov = "^6.2"
mypy = "^1.10"
#ruff = "^0.4"
black = "^24.4"
openapi-python-client = "^0.19.0"
pre-commit = "^3.7.1"
types-requests = "^2.32.0.20240602"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
