[project]
name = "offers-sdk"
version = "0.1.0"
description = "Async Offers API SDK"
authors = [
    {name = "bntmzu", email = "kuranova988@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "httpx (>=0.20.0,<0.28.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "click (>=8.0.0,<9.0.0)",
    "aiocache (>=0.12.3,<0.13.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
]

[project.optional-dependencies]
cli = ["click (>=8.0.0,<9.0.0)"]
cache = ["aiocache (>=0.12.3,<0.13.0)"]
aiohttp = ["aiohttp (>=3.12.15,<4.0.0)"]
requests = ["requests (>=2.32.4,<3.0.0)"]
dev = [
    "pytest (>=8.4,<9.0)",
    "pytest-asyncio (>=1.1,<2.0)",
    "pytest-cov (>=6.2,<7.0)",
    "mypy (>=1.10,<2.0)",
    "ruff (>=0.3,<1.0)",
    "isort (>=5.13,<6.0)",
    "black (>=24.4,<25.0)",
    "openapi-python-client (>=0.19.0,<1.0)",
    "pre-commit (>=3.7.1,<4.0)",
    "types-requests (>=2.32.0.20240602,<3.0)",
    "aiocache (>=0.12.3,<0.13.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "click (>=8.0.0,<9.0.0)",
]

[project.scripts]
offers-cli = "offers_sdk.cli:cli"

# Poetry-specific configuration (only for package structure)
[tool.poetry]
packages = [{include = "offers_sdk", from = "src"}]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/offers_sdk/generated/**" = ["UP006", "UP007", "UP035", "I001"]  # Ignore generated files

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["offers_sdk"]
force_single_line = true
skip = ["src/offers_sdk/generated/**"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
